Add connection to Rover

--- a/editions/free/src/localizations/zh-cn.json
+++ b/editions/free/src/localizations/zh-cn.json
@@ -300,6 +300,8 @@
     "CHARACTER_SailBoat.svg": "船",
     "CHARACTER_Boat2.svg": "船",
     "CHARACTER_Rocket.svg": "火箭",
+    "CHARACTER_Rover.svg": "月球漫步车",
+    "CHARACTER_Rover2.svg": "火星漫步车",
     "BACKGROUND_Farm.svg": "农场",
     "BACKGROUND_Park.svg": "公园",
     "BACKGROUND_Suburbs.svg": "郊区",
